# TCC

./: .gitignore  filter_min_csv.py  main.py  merge_metrics.py  pyproject.toml  requirements.txt
data/raw_min/: test.csv  train.csv  val.csv
models/: all_metrics.csv  all_metrics_v2.csv
models/resnet/complex/results/: metrics_summary.csv  predictions.csv
models/resnet/concat/results/: metrics_summary.csv  predictions.csv
models/resnet/concat_frequency/results/: metrics_summary.csv  predictions.csv
models/resnet/frequency_3/results/: metrics_summary.csv  predictions.csv
models/resnet/magnitude/results/: metrics_summary.csv  predictions.csv
models/resnet/phase/results/: metrics_summary.csv  predictions.csv
models/resnet/results/: metrics_summary.csv
models/vit/complex/results/: metrics_summary.csv  predictions.csv
models/vit/concat/results/: metrics_summary.csv  predictions.csv
models/vit/results/: metrics_summary.csv  outputs.npz  predictions.csv
models/xception/results/: metrics_summary.csv  outputs.npz
notebooks/: teste.ipynb
src/data/: __init__.py  data.py  paths.py
src/models/: __init__.py  clip.py  mobilenet.py  resnet.py  vit.py  xception.py
src/pipelines/: clip.py  evaluation.py  mobilenet.py  resnet.py  training.py  vit.py  xcpetion.py
src/plots/: __init__.py  plots.py
tests/: conftest.py  test_clip_model.py  test_clip_pipeline.py  test_data_paths.py  test_evaluation_safety.py  test_main.py  test_mobilenet_smoke.py  test_plots_safety.py  test_resnet_smoke.py  test_training_multi_gpu.py  test_vit_smoke.py  test_xception_smoke.py
(+39 files in other folders)
