[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Torch/CUDA 12.1 wheels em pytorch.org ainda não cobrem CPython 3.13 (use 3.12 ou 3.11).
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "torch>=2.2",
    "torchvision>=0.17",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
